--- a/view/assets/css/personal.css
+++ b/view/assets/css/personal.css
@@ -64,6 +64,7 @@ input.personal-sort {
 }
 
 input.personal_input-search {
+    outline: none;
     border-radius: 5px;
     font-size: 20px;
     width: 219px;
