--- a/view/assets/css/tich_diem.css
+++ b/view/assets/css/tich_diem.css
@@ -213,7 +213,7 @@ li.td__div {
     padding: 2px; 
     margin-right: 5px;
 }
-.td__div--snhv{
+.td__div--td{
     background-color: rgb(68, 84, 106);
 }
 .td__div--tdd{
@@ -271,7 +271,7 @@ i.fa-solid.fa-arrow-left {
     margin-bottom: 15px;   
 }
 
-.snhv__div--thanhngan {
+.td__div--thanhngan {
     margin-top: 3px;
     height: 12px;
     width: 100%;
@@ -339,7 +339,7 @@ input.td__div__input--gift {
 }
 
 /* popup gift */
-.view_gift__modal--popup.snhv__modal--popup--open
+.view_gift__modal--popup.td__modal--popup--open
 {
     display: flex;
 }
