--- a/view/assets/css/tich_diem.css
+++ b/view/assets/css/tich_diem.css
@@ -327,6 +327,10 @@ button.td__table--button_guiDate {
     background-color: #daeaf3;
 }
 
+.td__table_img--gift{
+    width: 60px;
+}
+
 .td__div__div_quatang-baoDong {
     margin: 17px 0px 0px 8px;
 }
@@ -335,7 +339,7 @@ img.td__div__div_quatang__form--showimg {
     width: 100px;
 }
 input.td__div__input--gift {
-    width: 71px;
+    width: 95px;
 }
 
 /* popup gift */
@@ -429,7 +433,6 @@ button.view_gift__table--button_guiDate {
 }
 
 a.td__div__a-xoaGift {
-    margin-left: 39px;
     margin-right: 10px;
 }
 
