--- a/view/assets/css/skkm.css
+++ b/view/assets/css/skkm.css
@@ -100,25 +100,44 @@ div tr.sk__table-view--title {
     width: 40%; 
 }
 /* header menu */
-.tab-bar {
-    margin-top: 10px;
-    margin-left: 10px;
+.sk__menu-header {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    margin: 15px 15px 0 15px;
 }
+  
+.sk__menu-header li {
+    float: left;
 
-.tab-bar a {
+}
+  
+.sk__menu-header li a {
+    display: block;
+    font-size: 16px;
+    color: white;
     text-align: center;
-    display: inline-block;
-    width: 16%;
-    padding: 12px;
-    border: none;
-    background-color: #d3cff1;
-    cursor: pointer;
+    padding: 10px 70px;
+    text-decoration: none;
+    background-color: #4472C4;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
-    color: white;
-    text-decoration: none;
+    cursor: pointer;
+}
+  
+.sk__menu-header li a.small {   
+    opacity: 0.5;
 }
 
-.tab-bar a.active {
-    background-color: #5ca1ec;
+li.menu-li.menu-li-su-kien {
+    background-color: rgb(68, 84, 106);
+}
+
+button.snhv__div--button.js-guiSMS {
+    width: 92px;
+    margin-left: 5px;
+}
+.snhv__div--chua_button--sua-gui {
+    display: flex;
 }
